--- a/transactions.html
+++ b/transactions.html
@@ -12,8 +12,7 @@
 
 <body class="font-sans">
     <header class="bg-zinc-100 m-4 p-4 w-4/5 mx-auto rounded">
-        <h1 class="text-center font-light text-4xl"><a href="/index.html">Bank.Gov</a> > <span
-                class="font-medium">Transactions</span>
+        <h1 id="home" class="text-center font-light text-4xl">Bank.Gov > <span class="font-medium">Transactions</span>
         </h1>
     </header>
     <main>
@@ -44,6 +43,7 @@
             </div>
         </section>
     </main>
+    <script src="javaScript/home.js"></script>
     <script src="javaScript/transactionsDeposit.js"></script>
     <script src="javaScript/transactionsWithdraw.js"></script>
 </body>
